--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "got": "^12.5.2",
     "jsdom": "^20.0.2",
     "node": "^19.0.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "puppeteer": "^19.4.1"
   },
   "name": "nodejs-backend",
   "version": "1.0.0",
@@ -18,7 +19,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/elisgitpage/solar-analyzer-backend.git"
